--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - DJANGO=2.2
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirement.txt
 
 before_script:
   - psql -c "CREATE DATABASE test;" -U postgres
